--- a/index.html
+++ b/index.html
@@ -3,71 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPARQL Query in Browser</title>
+    <title>SPARQL Query Runner</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
         pre {
-            background-color: #f4f4f4;
+            background: #f4f4f4;
             padding: 10px;
-            border-radius: 5px;
-            overflow: auto;
+            border: 1px solid #ddd;
+            overflow-x: auto;
+            max-height: 400px;
         }
     </style>
 </head>
 <body>
-    <h1>SPARQL Query Results</h1>
+    <h1>SPARQL Query Runner</h1>
     <button id="runQuery">Run Query</button>
-    <div id="results">
-        <h3>Results:</h3>
-        <pre id="output">Click "Run Query" to fetch results...</pre>
-    </div>
+    <h2>Results:</h2>
+    <pre id="results">No results yet...</pre>
 
     <script>
-        const endpoint = 'http://localhost:9999/blazegraph/#query'; // Blazegraph local endpoint
-
-        const query = `
-        SELECT ?animal ?species ?genus ?family ?class ?order ?phylum ?kingdom ?name ?redlist ?trend
-        WHERE {
-            ?animal 
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/scientificName> ?name ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/kingdomName> ?kingdom ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/phylumName> ?phylum ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/orderName> ?order ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/className> ?class ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/familyName> ?family ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/genusName> ?genus ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/speciesName> ?species ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/redlistCategory> ?redlist ;
-                <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/populationTrend> ?trend .
-        }
-        `;
-
         document.getElementById('runQuery').addEventListener('click', () => {
-            fetch(endpoint, {
-                method: 'POST',
+            const endpoint = "http://localhost:9999/blazegraph/sparql";
+            const query = `
+                PREFIX pra: <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/>
+                SELECT ?name ?species ?genus ?family ?class ?order ?phylum ?kingdom ?redlist ?trend ?animalID
+                WHERE {
+                    ?animalID      
+                        pra:scientificName ?name ;
+                        pra:kingdomName ?kingdom ;
+                        pra:phylumName ?phylum ;
+                        pra:orderName ?order ;
+                        pra:className ?class ;
+                        pra:familyName ?family ;
+                        pra:genusName ?genus ;
+                        pra:speciesName ?species ;
+                        pra:redlistCategory ?redlist ;
+                        pra:populationTrend ?trend .
+                }
+            `;
+
+            const url = endpoint + "?query=" + encodeURIComponent(query);
+
+            fetch(url, {
+                method: "GET",
                 headers: {
-                    'Content-Type': 'application/sparql-query',
-                    'Accept': 'application/sparql-results+json'
-                },
-                body: query
+                    "Accept": "application/sparql-results+json"
+                }
             })
             .then(response => {
                 if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
+                    throw new Error("Network response was not ok: " + response.statusText);
                 }
                 return response.json();
             })
             .then(data => {
-                // Format and display the results
-                const results = data.results.bindings.map(binding => {
-                    return Object.entries(binding).map(([key, value]) => `${key}: ${value.value}`).join('\n');
-                }).join('\n\n');
-                document.getElementById('output').textContent = results || "No results found.";
+                // Parse and display results
+                const bindings = data.results.bindings;
+                let results = bindings.map(binding => {
+                    return Object.entries(binding).map(([key, value]) => `${key}: ${value.value}`).join("\n");
+                }).join("\n\n");
+
+                document.getElementById('results').textContent = results || "No data found.";
             })
             .catch(error => {
-                document.getElementById('output').textContent = `Error: ${error.message}`;
+                console.error("Error fetching SPARQL data:", error);
+                document.getElementById('results').textContent = "Error: " + error.message;
             });
         });
     </script>
