--- a/plose.html
+++ b/plose.html
@@ -201,168 +201,307 @@
         </div>
 
         <script>
-            // SPARQL Query
-            const sparqlQuery = `
-                PREFIX pra: <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/>
-                SELECT ?family ?class ?order ?phylum ?kingdom
-                WHERE {
-                    ?animalID 
-                        pra:kingdomName ?kingdom ;
-                        pra:phylumName ?phylum ;
-                        pra:orderName ?order ;
-                        pra:className ?class ;
-                        pra:familyName ?family ;
-                }
-            `;
-
-            // Fetch Data from Blazegraph
-            async function fetchData() {
-                const endpointUrl = 'http://localhost:9999/blazegraph/sparql'; // Replace 'default' with your namespace
-                const encodedQuery = encodeURIComponent(sparqlQuery);
-                
-                try {
-                    const response = await fetch(`${endpointUrl}?query=${encodedQuery}`, {
-                        headers: {
-                            'Accept': 'application/json'
-                        }
-                    });
-
-                    if (!response.ok) {
-                        const errorText = await response.text();
-                        console.error('Error response:', errorText);
-                        throw new Error(`Network response was not ok: ${response.statusText}`);
-                    }
-
-                    const data = await response.json();
-                    return data.results.bindings.map(d => ({
-                        family: d.family.value,
-                        class: d.class.value,
-                        order: d.order.value,
-                        phylum: d.phylum.value,
-                        kingdom: d.kingdom.value
-                    }));
-                } catch (error) {
-                    console.error("Error fetching data: ", error);
-                    alert("Failed to fetch data. Please check the console for more details.");
-                }
+        const sparqlQueryFamilies = `
+            PREFIX pra: <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/>
+            SELECT ?family ?class ?order ?phylum ?kingdom
+            WHERE {
+                ?animalID 
+                    pra:kingdomName ?kingdom ;
+                    pra:phylumName ?phylum ;
+                    pra:orderName ?order ;
+                    pra:className ?class ;
+                    pra:familyName ?family ;
             }
+        `;
 
-            // Draw the Tree
-            async function drawTree() {
-                const data = await fetchData();
-                if (!data || data.length === 0) {
-                    alert("No data returned from the query.");
-                    return;
-                }
+        const sparqlQuerySpecies = `
+            PREFIX pra: <https://maastrichtuniversity.nl/course/PRA3006/2024/assessment/>
+            SELECT ?name ?species ?genus ?family ?redlist ?trend
+            WHERE {
+                ?animalID      
+                    pra:scientificName ?name ;
+                    pra:familyName ?family ;
+                    pra:genusName ?genus ;
+                    pra:speciesName ?species ;
+                    pra:redlistCategory ?redlist ;
+                    pra:populationTrend ?trend .
+            }
+        `;
 
-                // Convert the data into a hierarchical format for D3
-                const rootData = {
-                    name: "Root",
-                    children: []
-                };
-
-                const uniqueFamilies = new Set(); // to track unique families
-                const orderColors = {}; // to map orders to colors
-                const colorScale = d3.scaleOrdinal(d3.schemeCategory10); // Define color scale
-
-                data.forEach(species => {
-                    const order = species.order;
-                    const family = species.family;
-
-                    // Assign a color to each unique order
-                    if (!orderColors[order]) {
-                        orderColors[order] = colorScale(Object.keys(orderColors).length); // Get the next color from the scale
-                    }
-
-                    // Add unique family only once
-                    if (!uniqueFamilies.has(family)) {
-                        uniqueFamilies.add(family);
-
-                        // Check if the order already exists in the tree structure
-                        let orderNode = rootData.children.find(child => child.name === order);
-                        if (!orderNode) {
-                            orderNode = { name: order, children: [] };
-                            rootData.children.push(orderNode);
-                        }
-
-                        // Add the family under the corresponding order
-                        orderNode.children.push({ name: family });
+        async function fetchData(query) {
+            const endpointUrl = 'http://localhost:9999/blazegraph/sparql';
+            const encodedQuery = encodeURIComponent(query);
+            
+            try {
+                const response = await fetch(`${endpointUrl}?query=${encodedQuery}`, {
+                    headers: {
+                        'Accept': 'application/json'
                     }
                 });
 
-                // Set up the dimensions and SVG
-                const width = Math.min(window.innerWidth, 3300);
-                const outerRadius = Math.min(width / 2, 3000);
-                const innerRadius = outerRadius - 200;
+                if (!response.ok) {
+                    const errorText = await response.text();
+                    console.error('Error response:', errorText);
+                    throw new Error(`Network response was not ok: ${response.statusText}`);
+                }
 
-                const svg = d3.select("#tree-container")
-                    .append("svg")
-                    .attr("viewBox", [-outerRadius, -outerRadius, width, width])
-                    .attr("preserveAspectRatio", "xMidYMid meet");
+                const data = await response.json();
+                return data.results.bindings.map(d => ({
+                    family: d.family.value,
+                    class: d.class.value,
+                    order: d.order.value,
+                    phylum: d.phylum.value,
+                    kingdom: d.kingdom.value
+                }));
+            } catch (error) {
+                console.error("Error fetching data: ", error);
+                alert("Failed to fetch data. Please check the console for more details.");
+            }
+        }
 
-                const g = svg.append("g");
+        async function fetchSpeciesData() {
+            const endpointUrl = 'http://localhost:9999/blazegraph/sparql';
+            const encodedQuery = encodeURIComponent(sparqlQuerySpecies);
+            try {
+                const response = await fetch(`${endpointUrl}?query=${encodedQuery}`, {
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                });
 
-                const cluster = d3.cluster()
-                    .size([360, innerRadius]);
+                if (!response.ok) {
+                    const errorText = await response.text();
+                    console.error('Error response:', errorText);
+                    throw new Error(`Network response was not ok: ${response.statusText}`);
+                }
 
-                const root = d3.hierarchy(rootData)
-                    .sum(d => d.children ? 0 : 1)
-                    .sort((a, b) => d3.ascending(a.data.name, b.data.name));
+                const data = await response.json();
+                return data.results.bindings.map(d => ({
+                    name: d.name.value,
+                    species: d.species.value,
+                    genus: d.genus.value,
+                    family: d.family.value,
+                    redlist: d.redlist.value,
+                    trend: d.trend.value
+                }));
+            } catch (error) {
+                console.error("Error fetching species data: ", error);
+                alert("Failed to fetch species data. Please check the console for more details.");
+            }
+        }
 
-                cluster(root);
-
-                // Create a zoom function
-                const zoom = d3.zoom()
-                    .scaleExtent([0.5, 3]) // Set zoom limits
-                    .on("zoom", (event) => {
-                        g.attr("transform", event.transform);
-                    });
-
-                svg.call(zoom); // Enable zooming on the SVG
-
-                // Draw the links with colors based on orders
-                g.append("g")
-                    .attr("fill", "none")
-                    .attr("stroke-opacity", 0.4)
-                    .attr("stroke-width", 1.5)
-                    .selectAll("path")
-                    .data(root.links())
-                    .join("path")
-                    .attr("d", d3.linkRadial()
-                        .angle(d => d.x / 180 * Math.PI)
-                        .radius(d => d.y))
-                    .attr("stroke", d => {
-                        // Find the color of the link based on the order
-                        return orderColors[d.target.parent.data.name] || "#555"; // Default color if not found
-                    });
-
-                // Draw the nodes (labels)
-                g.append("g")
-                    .selectAll("text")
-                    .data(root.leaves())
-                    .join("text")
-                    .attr("dy", ".31em")
-                    .attr("transform", d => `
-                        rotate(${d.x - 90}) 
-                        translate(${d.y + 10},0)
-                        ${d.x < 180 ? "" : "rotate(180)"}
-                    `)
-                    .attr("text-anchor", d => d.x < 180 ? "start" : "end")
-                    .text(d => d.data.name)
-                    .on("mouseover", function (event) {
-                        d3.select(event.target).classed("label--active", true);
-                    })
-                    .on("mouseout", function (event) {
-                        d3.select(event.target).classed("label--active", false);
-                    })
-                    .on("click", function (event, d) {
-                         d3.select("#tree-container").selectAll("*").remove();
-                    });
+        async function drawTree() {
+            const data = await fetchData(sparqlQueryFamilies);
+            if (!data || data.length === 0) {
+                alert("No data returned from the query.");
+                return;
             }
 
-            // Call drawTree to execute the fetching and drawing
-            drawTree();
-        </script>
+            const rootData = {
+                name: "Root",
+                children: []
+            };
+
+            const uniqueFamilies = new Set();
+            const orderColors = {};
+            const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
+
+            data.forEach(species => {
+                const order = species.order;
+                const family = species.family;
+
+                if (!orderColors[order]) {
+                    orderColors[order] = colorScale(Object.keys(orderColors).length);
+                }
+
+                if (!uniqueFamilies.has(family)) {
+                    uniqueFamilies.add(family);
+
+                    let orderNode = rootData.children.find(child => child.name === order);
+                    if (!orderNode) {
+                        orderNode = { name: order, children: [] };
+                        rootData.children.push(orderNode);
+                    }
+
+                    orderNode.children.push({ name: family });
+                }
+            });
+
+            createTree(rootData, orderColors);
+        }
+
+        function createTree(rootData, orderColors) {
+            const width = Math.min(window.innerWidth, 3300);
+            const outerRadius = Math.min(width / 2, 3000);
+            const innerRadius = outerRadius - 200;
+
+            const svg = d3.select("#tree-container")
+                .append("svg")
+                .attr("viewBox", [-outerRadius, -outerRadius, width, width])
+                .attr("preserveAspectRatio", "xMidYMid meet");
+
+            const g = svg.append("g");
+
+            const cluster = d3.cluster()
+                .size([360, innerRadius]);
+
+            const root = d3.hierarchy(rootData)
+                .sum(d => d.children ? 0 : 1)
+                .sort((a, b) => d3.ascending(a.data.name, b.data.name));
+
+            cluster(root);
+
+            const zoom = d3.zoom()
+                .scaleExtent([0.5, 3])
+                .on("zoom", (event) => {
+                    g.attr("transform", event.transform);
+                });
+
+            svg.call(zoom);
+
+            g.append("g")
+                .attr("fill", "none")
+                .attr("stroke-opacity", 0.4)
+                .attr("stroke-width", 1.5)
+                .selectAll("path")
+                .data(root.links())
+                .join("path")
+                .attr("d", d3.linkRadial()
+                    .angle(d => d.x / 180 * Math.PI)
+                    .radius(d => d.y))
+                .attr("stroke", d => {
+                    return orderColors[d.target.parent.data.name] || "#555";
+                });
+
+            g.append("g")
+                .selectAll("text")
+                .data(root.leaves())
+                .join("text")
+                .attr("dy", ".31em")
+                .attr("transform", d => `
+                    rotate(${d.x - 90}) 
+                    translate(${d.y + 10},0)
+                    ${d.x < 180 ? "" : "rotate(180)"}
+                `)
+                .attr("text-anchor", d => d.x < 180 ? "start" : "end")
+                .text(d => d.data.name)
+                .on("mouseover", function (event) {
+                    d3.select(event.target).classed("label--active", true);
+                })
+                .on("mouseout", function (event) {
+                    d3.select(event.target).classed("label--active", false);
+                })
+                .on("click", async function (event, d) {
+                    const speciesData = await fetchSpeciesData();
+                    const familySpecies = speciesData.filter(species => species.family === d.data.name);
+
+                    if (familySpecies && familySpecies.length > 0) {
+                        // Set the family name above the tree
+                        d3.select("#family-name").text(d.data.name);
+
+                        const genusMap = {};
+                        familySpecies.forEach(species => {
+                            if (!genusMap[species.genus]) {
+                                genusMap[species.genus] = {
+                                    name: species.genus,
+                                    children: []
+                                };
+                            }
+                            genusMap[species.genus].children.push({
+                                name: species.name,
+                                redlist: species.redlist,
+                                trend: species.trend
+                            });
+                        });
+
+                        const speciesRoot = {
+                            name: "Species",
+                            children: Object.values(genusMap)
+                        };
+
+                        createSpeciesTree(speciesRoot);
+                        document.getElementById("backButton").style.display = "block";
+                    }
+                });
+        }
+
+        function createSpeciesTree(speciesRoot) {
+            d3.select("#tree-container").select("svg").remove();
+
+            const width = Math.min(window.innerWidth, 3300);
+            const outerRadius = Math.min(width / 2, 3000);
+            const innerRadius = outerRadius - 200;
+
+            const svg = d3.select("#tree-container")
+                .append("svg")
+                .attr("viewBox", [-outerRadius, -outerRadius, width, width])
+                .attr("preserveAspectRatio", "xMidYMid meet");
+
+            const g = svg.append("g");
+
+            const cluster = d3.cluster()
+                .size([360, innerRadius]);
+
+            const root = d3.hierarchy(speciesRoot)
+                .sum(d => d.children ? 0 : 1)
+                .sort((a, b) => d3.ascending(a.data.name, b.data.name));
+
+            cluster(root);
+
+            const zoom = d3.zoom()
+                .scaleExtent([0.5, 3])
+                .on("zoom", (event) => {
+                    g.attr("transform", event.transform);
+                });
+
+            svg.call(zoom);
+
+            g.append("g")
+                .attr("fill", "none")
+                .attr("stroke-opacity", 0.4)
+                .attr("stroke-width", 1.5)
+                .selectAll("path")
+                .data(root.links())
+                .join("path")
+                .attr("d", d3.linkRadial()
+                    .angle(d => d.x / 180 * Math.PI)
+                    .radius(d => d.y))
+                .attr("stroke", "#555");
+
+            const tooltip = d3.select("#tooltip");
+
+            g.append("g")
+                .selectAll("text")
+                .data(root.leaves())
+                .join("text")
+                .attr("dy", ".31em")
+                .attr("transform", d => `
+                    rotate(${d.x - 90}) 
+                    translate(${d.y + 10},0)
+                    ${d.x < 180 ? "" : "rotate(180)"}
+                `)
+                .attr("text-anchor", d => d.x < 180 ? "start" : "end")
+                .text(d => d.data.name)
+                .on("mouseover", function (event, d) {
+                    tooltip.transition().duration(200).style("opacity", .9);
+                    tooltip.html(`IUCN Threat Category: ${d.data.redlist}<br>Trend: ${d.data.trend}`)
+                        .style("left", (event.pageX + 5) + "px")
+                        .style("top", (event.pageY - 28) + "px");
+                })
+                .on("mouseout", function () {
+                    tooltip.transition().duration(500).style("opacity", 0);
+                });
+
+            document.getElementById("backButton").addEventListener("click", function () {
+                document.getElementById("backButton").style.display = "none";
+                d3.select("#tree-container").select("svg").remove();
+                d3.select("#family-name").text(""); // Clear family name
+                drawTree();
+            });
+        }
+
+        drawTree();
+    </script>
 
         <div class="bottom-buttons">
             <button>Taxonomy</button>
