--- a/Not graded/index.html
+++ b/Not graded/index.html
@@ -16,6 +16,13 @@
         .label--active {
             font-weight: bold;
         }
+        #tree-container {
+            width: 100%;
+            height: 80vh; /* Set height to 80% of the viewport */
+            overflow: auto; /* Enable scrolling */
+            border: 1px solid #ccc; /* Optional: add a border for better visibility */
+            position: relative; /* Position for tooltip */
+        }
         svg {
             width: 100%;
             height: auto;
@@ -23,8 +30,24 @@
         text {
             font-size: 12px;
         }
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            padding: 5px;
+            font: 12px sans-serif;
+            background: lightsteelblue;
+            border: 1px solid #333;
+            border-radius: 5px;
+            pointer-events: none;
+            opacity: 0; /* Hidden by default */
+        }
         #backButton {
             display: none; /* Hide back button initially */
+            margin: 10px;
+        }
+        #family-name {
+            font-size: 16px;
+            font-weight: bold;
             margin: 10px;
         }
     </style>
@@ -32,8 +55,10 @@
 <body>
     <h1>Phylogenetic Tree of Marine Species</h1>
     <p>This visualization represents marine species as a phylogenetic tree, with lines colored according to their taxonomic order.</p>
+    <div id="family-name"></div> <!-- Display family name here -->
     <button id="backButton">Back to Family View</button>
     <div id="tree-container"></div>
+    <div class="tooltip" id="tooltip"></div> <!-- Tooltip for hover info -->
 
     <script>
         const sparqlQueryFamilies = `
@@ -231,39 +256,46 @@
                     const familySpecies = speciesData.filter(species => species.family === d.data.name);
 
                     if (familySpecies && familySpecies.length > 0) {
+                        // Set the family name above the tree
+                        d3.select("#family-name").text(d.data.name);
+
                         const genusMap = {};
                         familySpecies.forEach(species => {
                             if (!genusMap[species.genus]) {
-                                genusMap[species.genus] = [];
+                                genusMap[species.genus] = {
+                                    name: species.genus,
+                                    children: []
+                                };
                             }
-                            genusMap[species.genus].push(species.name); // Use 'name' for scientific name
+                            genusMap[species.genus].children.push({
+                                name: species.name,
+                                redlist: species.redlist,
+                                trend: species.trend
+                            });
                         });
 
                         const speciesRoot = {
-                            name: d.data.name, // This is the family name now
-                            children: Object.entries(genusMap).map(([genus, speciesArray]) => ({
-                                name: genus,
-                                children: speciesArray.map(scientificName => ({
-                                    name: scientificName
-                                }))
-                            }))
+                            name: "Species",
+                            children: Object.values(genusMap)
                         };
 
                         createSpeciesTree(speciesRoot);
-                        document.getElementById("backButton").style.display = "inline";
-                    } else {
-                        alert("No species found for this family.");
+                        document.getElementById("backButton").style.display = "block";
                     }
                 });
         }
 
         function createSpeciesTree(speciesRoot) {
+            d3.select("#tree-container").select("svg").remove();
+
             const width = Math.min(window.innerWidth, 3300);
             const outerRadius = Math.min(width / 2, 3000);
             const innerRadius = outerRadius - 200;
 
-            const svg = d3.select("#tree-container").select("svg");
-            svg.selectAll("*").remove();
+            const svg = d3.select("#tree-container")
+                .append("svg")
+                .attr("viewBox", [-outerRadius, -outerRadius, width, width])
+                .attr("preserveAspectRatio", "xMidYMid meet");
 
             const g = svg.append("g");
 
@@ -275,6 +307,14 @@
                 .sort((a, b) => d3.ascending(a.data.name, b.data.name));
 
             cluster(root);
+
+            const zoom = d3.zoom()
+                .scaleExtent([0.5, 3])
+                .on("zoom", (event) => {
+                    g.attr("transform", event.transform);
+                });
+
+            svg.call(zoom);
 
             g.append("g")
                 .attr("fill", "none")
@@ -288,6 +328,8 @@
                     .radius(d => d.y))
                 .attr("stroke", "#555");
 
+            const tooltip = d3.select("#tooltip");
+
             g.append("g")
                 .selectAll("text")
                 .data(root.leaves())
@@ -299,15 +341,24 @@
                     ${d.x < 180 ? "" : "rotate(180)"}
                 `)
                 .attr("text-anchor", d => d.x < 180 ? "start" : "end")
-                .text(d => d.data.name);
+                .text(d => d.data.name)
+                .on("mouseover", function (event, d) {
+                    tooltip.transition().duration(200).style("opacity", .9);
+                    tooltip.html(`IUCN Threat Category: ${d.data.redlist}<br>Trend: ${d.data.trend}`)
+                        .style("left", (event.pageX + 5) + "px")
+                        .style("top", (event.pageY - 28) + "px");
+                })
+                .on("mouseout", function () {
+                    tooltip.transition().duration(500).style("opacity", 0);
+                });
 
+            document.getElementById("backButton").addEventListener("click", function () {
+                document.getElementById("backButton").style.display = "none";
+                d3.select("#tree-container").select("svg").remove();
+                d3.select("#family-name").text(""); // Clear family name
+                drawTree();
+            });
         }
-
-        document.getElementById("backButton").addEventListener("click", function () {
-            document.getElementById("backButton").style.display = "none";
-            d3.select("#tree-container").select("svg").remove();
-            drawTree();
-        });
 
         drawTree();
     </script>
